Configured docker build and fixed broken links

--- a/Components/pc-nav.html
+++ b/Components/pc-nav.html
@@ -10,7 +10,7 @@
             </div>
             <div id="empty2"></div>
             <div class="navbar-link animation-hover pc">
-                <a class="btn pc" href="/Index.html">Home</a>
+                <a class="btn pc" href="/index.html">Home</a>
             </div>
 
             <div class="Dropdown animation-hover pc">
@@ -23,7 +23,7 @@
             </div>
 
             <div class="Dropdown animation-hover">
-                <a class="btn pc" href="/Gatves/stikliu/Stikliu.html">Stikliu</a>
+                <a class="btn pc" href="/Gatves/stikliu/stikliu.html">Stikliu</a>
                 <div class="Dropdown-content pc">   
                     <!-- <a href="/Gatves/Stikliu/stikliu-explore.html">Explore</a> -->
                     <a href="/Gatves/Stikliu/stikliu-amenities.html">Amenities</a>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="navbar-link animation-hover pc">
-                <a class="btn pc" href="/Info.html">Info</a>
+                <a class="btn pc" href="/info.html">Info</a>
             </div>
         </div>
     </body>
