--- a/Components/phone-nav.html
+++ b/Components/phone-nav.html
@@ -8,7 +8,7 @@
                 Very Vilnius Apartments
             </div>
             <div class="navbar-link phone">
-                <a class="btn phone" href="/Index.html">Home</a>
+                <a class="btn phone" href="/index.html">Home</a>
             </div>
 
             <div class="Dropdown phone">
@@ -41,7 +41,7 @@
             </div>
 
             <div class="navbar-link phone">
-                <a class="btn phone" href="/Info.html">Info</a>
+                <a class="btn phone" href="/info.html">Info</a>
             </div>
         </div>
     </body>
