Fixed more bugs

--- a/Components/pc-nav.html
+++ b/Components/pc-nav.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="Dropdown animation-hover">
-                <a class="btn pc" href="/Gatves/stikliu/stikliu.html">Stikliu</a>
+                <a class="btn pc" href="/Gatves/Stikliu/stikliu.html">Stikliu</a>
                 <div class="Dropdown-content pc">   
                     <!-- <a href="/Gatves/Stikliu/stikliu-explore.html">Explore</a> -->
                     <a href="/Gatves/Stikliu/stikliu-amenities.html">Amenities</a>
