--- a/Components/phone-nav.html
+++ b/Components/phone-nav.html
@@ -5,7 +5,8 @@
     <body>
         <div class="navbar phone">
             <div class="navbar-title phone">
-                Very Vilnius Apartments
+                Very Vilnius <br/> 
+                Apartments
             </div>
             <div class="navbar-link phone">
                 <a class="btn phone" href="/index.html">Home</a>
