--- a/Style.css
+++ b/Style.css
@@ -100,7 +100,7 @@ body {
 }
 .navbar.phone {
   flex-direction: column;
-  min-width: 25vw;
+  min-width: 30vw;
   max-width: 30vw;
   height: 100%;
   padding-left: 5px;
@@ -126,6 +126,8 @@ body {
   width: 100px;
 }
 .navbar-title.phone {
+  white-space: nowrap;
+  overflow: hidden;
   font-size: 2.5rem;
   padding-bottom: 10px;
 }
@@ -252,7 +254,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
 }
 #map {
@@ -266,10 +268,11 @@ body {
   width: 100%;
   height: auto;
   justify-content: space-evenly;
-  margin: 50px 25px;
+  margin: 50px auto;
 }
 .street-view {
   width: 30%;
+  margin: 20px;
   aspect-ratio: 1 / 1;
 }
 
@@ -391,9 +394,7 @@ body {
 /* <=== Miscellaneous ===> */
 
 /* <== Photosphere ==> */
-body {
-  min-height: 100vh;
-}
+
 .Photosphere-container {
   margin-top: 30px;
   display: flex;
@@ -461,6 +462,7 @@ body {
 }
 
 /* <== Street-img ==> */
+
 /* <= Pilies => */
 #p-d-1 {
   background-image: url(/Home-img/Pilies-img/Directions/dir-1.png);
@@ -533,8 +535,12 @@ navbar-component-phone {
     display: block;
   }
   body {
+    min-width: 500px;
     display: flex;
     flex-direction: row;
+  }
+  #Title {
+    font-size: 3rem;
   }
   #locations {
     flex-direction: column;
@@ -542,6 +548,19 @@ navbar-component-phone {
   }
   #map-container {
     margin-top: 10px;
+  }
+
+  #email-form {
+    display: block;
+  }
+  #email-form * {
+    display: block;
+    width: 100%;
+    height: 45px;
+    margin: 8px;
+  }
+  #message {
+    height: 150px;
   }
   .navbar-title {
     font-size: 2rem;
@@ -571,7 +590,6 @@ navbar-component-phone {
   #street-view-container {
     flex-direction: column;
     width: 100%;
-    height: auto;
     align-items: center;
   }
   .street-view {
