Fixed and improved mobile display

--- a/Components/phone-nav.html
+++ b/Components/phone-nav.html
@@ -2,7 +2,8 @@
     <head>
         <link rel="stylesheet" type="text/css" href="/Style.css" />
     </head>
-    <body>
+    <body style="position: relative;">
+        <button onclick="ToggleNav(this)" id="side-btn">&#707</button>
         <div class="navbar phone">
             <div class="navbar-title phone">
                 Very Vilnius <br/> 
