--- a/Style.css
+++ b/Style.css
@@ -62,6 +62,8 @@ html {
 body {
   background-color: var(--white);
   overflow-x: hidden;
+  min-height: 100vh;
+  glyph-orientation-vertical: auto;
 }
 .bod2 {
   width: 100%;
@@ -99,11 +101,30 @@ body {
   width: 100%;
 }
 .navbar.phone {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   flex-direction: column;
   min-width: 30vw;
-  max-width: 30vw;
+  max-width: 60vw;
   height: 100%;
   padding-left: 5px;
+  z-index: 2;
+}
+#side-btn {
+  position: fixed;
+  font-size: 7rem;
+  top: 20px;
+  left: 50px;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+  z-index: 3;
 }
 
 .navbar-title {
@@ -112,11 +133,15 @@ body {
   font-family: Avenida-W01;
   letter-spacing: 1px;
   box-sizing: border-box;
-}
-.navbar-title.pc {
   overflow: hidden;
   white-space: nowrap;
+}
+.navbar-title.pc {
   min-width: none;
+}
+.navbar-title.phone {
+  font-size: 4rem;
+  padding-bottom: 10px;
 }
 
 #empty {
@@ -124,12 +149,6 @@ body {
 }
 #empty2 {
   width: 100px;
-}
-.navbar-title.phone {
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 2.5rem;
-  padding-bottom: 10px;
 }
 
 /* <== Navbar Dropdown ==> */
@@ -164,12 +183,13 @@ body {
   display: block;
   padding: 6px;
   font-family: Amatic-sc;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 600;
   white-space: nowrap;
   animation: fadeIn 0.75s;
 }
 .Dropdown-content.phone a {
+  font-size: 3rem;
   padding: 12px 0px 12px 20px;
 }
 .Dropdown-content.pc a:hover {
@@ -179,7 +199,7 @@ body {
 .btn {
   font-family: Amatic-sc;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 2rem;
   letter-spacing: 2px;
   white-space: nowrap;
 }
@@ -219,6 +239,7 @@ body {
 }
 
 .thumb-img {
+  width: 100%;
   max-width: 100%;
   max-height: 100%;
 }
@@ -229,7 +250,7 @@ body {
   right: 20px;
 
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: Amatic-sc;
   font-weight: bold;
   padding: 15px;
@@ -528,7 +549,8 @@ navbar-component-phone {
     right: 20%;
   }
 }
-@media (max-aspect-ratio: 9 / 13) {
+/* Avoided using aspect-ratio */
+@media (max-aspect-ratio: 9 / 14) {
   navbar-component-pc {
     display: none;
   }
@@ -540,8 +562,17 @@ navbar-component-phone {
     display: flex;
     flex-direction: row;
   }
+  .bod2 > * {
+    width: 100%;
+  }
   #Title {
-    font-size: 3rem;
+    font-size: 4rem;
+  }
+  .apartment-opt {
+    width: 80%;
+  }
+  .street-links {
+    font-size: 4rem;
   }
   #locations {
     flex-direction: column;
@@ -557,15 +588,22 @@ navbar-component-phone {
   #email-form > * {
     display: block;
     width: 100%;
-    height: 45px;
+    height: 75px;
     margin: 8px;
+    font-size: 3rem;
   }
   #message {
-    height: 150px;
+    height: 200px;
   }
   .navbar-title {
     font-size: 2rem;
     text-align: center;
+  }
+  .btn {
+    font-size: 5rem;
+  }
+  .Dropdown-content.phone a {
+    font-size: 4rem;
   }
   .gallery {
     display: flex;
