--- a/Style.css
+++ b/Style.css
@@ -409,7 +409,7 @@ body {
   background-position: center;
   background-size: contain;
   overflow: hidden;
-  min-height: 350px;
+  min-height: 600px;
   margin: 5px;
 }
 
@@ -530,14 +530,15 @@ body {
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
   background-color: white;
   position: fixed;
-  right: 0;
+  right: 10px;
+  top: 10px;
   width: fit-content;
   height: fit-content;
   font-weight: bold;
 }
 .language-container a {
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 2.5rem;
 }
 
 /* <=== Phone ===> */
