--- a/Style.css
+++ b/Style.css
@@ -25,9 +25,9 @@
 }
 
 :root {
-  --gray: rgb(76, 76, 76);
+  --gray: rgb(44, 44, 44);
   --white: rgb(250, 250, 250);
-  --blue: rgb(0, 22, 135);
+  --blue: rgb(1, 64, 166);
 }
 
 a[href],
@@ -325,7 +325,7 @@ body {
   font-family: inherit;
 }
 .email:focus {
-  border: 2px solid black;
+  border: 2px solid var(--blue);
 }
 #name {
   grid-area: 1 / 1;
@@ -341,17 +341,18 @@ body {
   grid-area: 1 / 2 / 3 / 2;
 }
 #submit {
-  background-color: rgb(0, 117, 0);
+  background-color: rgb(67, 139, 255);
+  transition: all 0.5s ease;
   color: var(--white);
   grid-area: 3 / 2 / 4 / 2;
 }
 #submit:hover {
-  border: 3px solid black;
+  background-color: var(--blue);
 }
 
 /* <=== Directions ===> */
 .dir-container {
-  margin-top: 30px;
+  margin-top: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -381,7 +382,7 @@ body {
 }
 
 .dir-title {
-  margin-top: 300px;
+  margin-top: 50px;
   font-size: 3rem;
   font-weight: 500;
 }
@@ -439,7 +440,7 @@ body {
   gap: 10px;
 }
 .picture {
-  border: 3px solid var(--blue);
+  border: 3px solid var(--gray);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -470,7 +471,7 @@ body {
   text-transform: none;
 }
 .section-title {
-  background-color: #606060;
+  background-color: var(--gray);
   display: flex;
   text-align: start;
 }
