--- a/Style.css
+++ b/Style.css
@@ -528,6 +528,12 @@ body {
 #v-d-1 {
 	background-image: url(/Home-img/Vilniaus-img/Directions/dir-1.png);
 }
+#v-d-2 {
+	background-image: url(/Home-img/Vilniaus-img/Directions/dir-2.png);
+}
+#v-d-3 {
+	background-image: url(/Home-img/Vilniaus-img/Directions/dir-3.png);
+}
 
 /* <== Language ==> */
 .language-container {
