Added indication of position in navbar

--- a/Components/pc-nav.html
+++ b/Components/pc-nav.html
@@ -13,27 +13,27 @@
                 <a class="btn pc" href="/index.html">Home</a>
             </div>
 
-            <div class="Dropdown animation-hover pc">
+            <div class="dropdown animation-hover pc">
                 <a class="btn pc" href="/Gatves/Pilies/pilies.html">Pilies</a>
-                <div class="Dropdown-content pc">   
+                <div class="dropdown-content pc">   
                     <a href="/Gatves/Pilies/pilies-explore.html">Explore</a>
                     <a href="/Gatves/Pilies/pilies-amenities.html">Amenities</a>
                     <!-- <a href="/Gatves/Pilies/Directions/pilies-directions-en.html">Directions</a> -->
                 </div>
             </div>
 
-            <div class="Dropdown animation-hover">
+            <div class="dropdown animation-hover">
                 <a class="btn pc" href="/Gatves/Stikliu/stikliu.html">Stikliu</a>
-                <div class="Dropdown-content pc">   
+                <div class="dropdown-content pc">   
                     <!-- <a href="/Gatves/Stikliu/stikliu-explore.html">Explore</a> -->
                     <a href="/Gatves/Stikliu/stikliu-amenities.html">Amenities</a>
                     <!-- <a href="/Gatves/Stikliu/Directions/stikliu-directions-en.html">Directions</a> -->
                 </div>
             </div>
 
-            <div class="Dropdown animation-hover">
+            <div class="dropdown animation-hover">
                 <a class="btn pc" href="/Gatves/Vilniaus/vilniaus.html">Vilniaus</a>
-                <div class="Dropdown-content pc">   
+                <div class="dropdown-content pc">   
                     <a href="/Gatves/Vilniaus/vilniaus-explore.html">Explore</a>
                     <a href="/Gatves/Vilniaus/vilniaus-amenities.html">Amenities</a>
                 </div>
