--- a/Components/phone-nav.html
+++ b/Components/phone-nav.html
@@ -9,13 +9,13 @@
                 Very Vilnius <br/> 
                 Apartments
             </div>
-            <div class="navbar-link phone">
+            <div class="dropdown phone">
                 <a class="btn phone" href="/index.html">Home</a>
             </div>
 
-            <div class="Dropdown phone">
+            <div class="dropdown phone">
                 <button class="btn phone" onclick="ToggleOptions('Pil', this)">Pilies &#708</button>
-                <div class="Dropdown-content phone" id="Pil">   
+                <div class="dropdown-content phone" id="Pil">   
                     <a href="/Gatves/Pilies/pilies.html">Pilies</a>
                     <a href="/Gatves/Pilies/pilies-explore.html">Explore</a>
                     <a href="/Gatves/Pilies/pilies-amenities.html">Amenities</a>
@@ -23,9 +23,9 @@
                 </div>
             </div>
 
-            <div class="Dropdown phone">
+            <div class="dropdown phone">
                 <button class="btn phone" onclick="ToggleOptions('Stk', this)">Stiklių &#708</button>
-                <div class="Dropdown-content phone" id="Stk">   
+                <div class="dropdown-content phone" id="Stk">   
                     <a href="/Gatves/Stikliu/stikliu.html">Stiklių</a>
                     <!-- <a href="/Gatves/Stikliu/stikliu-explore.html">Explore</a>-->
                     <a href="/Gatves/Stikliu/stikliu-amenities.html">Amenities</a>
@@ -33,16 +33,16 @@
                 </div>
             </div>
 
-            <div class="Dropdown phone">
+            <div class="dropdown phone">
                 <button class="btn phone" onclick="ToggleOptions('Vln', this)">Vilniaus &#708</button>
-                <div class="Dropdown-content phone" id="Vln">   
+                <div class="dropdown-content phone" id="Vln">   
                     <a href="/Gatves/Vilniaus/vilniaus.html">Vilniaus</a>
                     <a href="/Gatves/Vilniaus/vilniaus-explore.html">Explore</a>
                     <a href="/Gatves/Vilniaus/vilniaus-amenities.html">Amenities</a>
                 </div>
             </div>
 
-            <div class="navbar-link phone">
+            <div class="dropdown phone">
                 <a class="btn phone" href="/info.html">Info</a>
             </div>
         </div>
