--- a/Style.css
+++ b/Style.css
@@ -27,7 +27,8 @@
 :root {
 	--gray: rgb(44, 44, 44);
 	--white: rgb(250, 250, 250);
-	--blue: rgb(1, 64, 166);
+	--blue: rgb(34, 91, 183);
+	--hoverblue: rgba(28, 145, 234, 0.682);
 }
 
 a[href],
@@ -45,7 +46,7 @@ li {
 	background-size: 100% 200%;
 	background-image: linear-gradient(
 		0deg,
-		var(--blue) 50%,
+		var(--hoverblue) 50%,
 		rgba(0, 0, 0, 0) 50.001%
 	);
 	background-position: top;
@@ -151,21 +152,22 @@ body {
 	width: 100px;
 }
 
-/* <== Navbar Dropdown ==> */
-.Dropdown,
+/* <== Navbar dropdown ==> */
+.dropdown,
 .navbar-link {
 	color: var(--white);
 	position: relative;
 	padding: 12px;
-	box-sizing: border-box;
+	width: fit-content;
+
 	z-index: 2;
 }
 
-.Dropdown:hover .Dropdown-content.pc {
+.dropdown:hover .dropdown-content.pc {
 	display: block;
 }
 
-.Dropdown-content.pc {
+.dropdown-content.pc {
 	z-index: 1;
 	position: absolute;
 
@@ -175,11 +177,11 @@ body {
 	border: 2px solid black;
 	left: 0px;
 }
-.Dropdown-content {
+.dropdown-content {
 	display: none;
 }
 
-.Dropdown-content a {
+.dropdown-content a {
 	display: block;
 	padding: 6px;
 	font-family: Amatic-sc;
@@ -188,12 +190,12 @@ body {
 	white-space: nowrap;
 	animation: fadeIn 0.75s;
 }
-.Dropdown-content.phone a {
+.dropdown-content.phone a {
 	font-size: 3rem;
 	padding: 12px 0px 12px 20px;
 }
-.Dropdown-content.pc a:hover {
-	background-color: var(--white);
+.dropdown-content.pc a:hover {
+	background-color: rgb(240, 240, 240);
 }
 
 .btn {
@@ -628,7 +630,7 @@ navbar-component-phone {
 	.btn {
 		font-size: 5rem;
 	}
-	.Dropdown-content.phone a {
+	.dropdown-content.phone a {
 		font-size: 4rem;
 	}
 	.gallery {
